--- a/views/course-management.html
+++ b/views/course-management.html
@@ -122,16 +122,16 @@
           <nav ui-nav class="navi clearfix">
             <ul class="nav">
               <li>
-                <a href="#">
+                <a href="/personal">
                   <i class="icon-user icon"></i>
                   <span>Личный кабинет</span>
                 </a>
               </li>
                             
-               <li>
-                <a href="#">
-                  <i class="glyphicon glyphicon-file icon"></i>
-                  <span>Каталог курсов</span>
+               <li class="active" onclick="event.stopPropagation()">
+                <a href="#" onclick="event.stopPropagation()">
+                  <i class="glyphicon glyphicon-file icon" onclick="event.stopPropagation()"></i>
+                  <span onclick="event.stopPropagation()">Каталог курсов</span>
                 </a>
               </li>
         
