--- a/views/courses.ejs
+++ b/views/courses.ejs
@@ -2,7 +2,7 @@
 <html lang="en" class="">
 <head>
   <meta charset="utf-8" />
-  <title>Пользователи</title>
+  <title>Курсы</title>
   <meta name="description" content="app, web app, responsive, responsive layout, admin, admin panel, admin dashboard, flat, flat ui, ui kit, AngularJS, ui route, charts, widgets, components" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
   <link rel="stylesheet" href="../libs/assets/animate.css/animate.css" type="text/css" />
@@ -23,63 +23,12 @@
 
 	
   
-
-    <!-- header -->
-  <header id="header" class="app-header navbar" role="menu">
-      <!-- navbar header -->
-      <div class="navbar-header bg-dark">
-        <button class="pull-right visible-xs dk" ui-toggle-class="show" target=".navbar-collapse">
-          <i class="glyphicon glyphicon-cog"></i>
-        </button>
-        <button class="pull-right visible-xs" ui-toggle-class="off-screen" target=".app-aside" ui-scroll="app">
-          <i class="glyphicon glyphicon-align-justify"></i>
-        </button>
-        <!-- brand -->
-        <a href="#/" class="navbar-brand text-lt">
-          <span class="hidden-folded m-l-xs">Logo</span>
-        </a>
-        <!-- / brand -->
-      </div>
-      <!-- / navbar header -->
-
-      <!-- navbar collapse -->
-      <div class="collapse pos-rlt navbar-collapse box-shadow bg-white-only">
-        <!-- buttons -->
-        <div class="nav navbar-nav hidden-xs">
-          <a href="#" class="btn no-shadow navbar-btn" ui-toggle-class="app-aside-folded" target=".app">
-            <i class="fa fa-dedent fa-fw text"></i>
-            <i class="fa fa-indent fa-fw text-active"></i>
-          </a>
-        </div>
-        <!-- / buttons -->
-
-        <!-- nabar right -->
-        <ul class="nav navbar-nav navbar-right">
-          <li class="dropdown">
-            <a href="#" data-toggle="dropdown" class="dropdown-toggle clear" data-toggle="dropdown">
-              <span class="thumb-sm avatar pull-right m-t-n-sm m-b-n-sm m-l-sm">
-                <img src="img/a0.jpg" alt="...">
-                <i class="on md b-white bottom"></i>
-              </span>
-              <span class="hidden-sm hidden-md">Евгений Орлов</span> <b class="caret"></b>
-            </a>
-             <!-- dropdown -->
-            <ul class="dropdown-menu animated fadeInUp w">
-              <li class="divider"></li>
-              <li>
-                <a href="index.html">Выйти</a>
-              </li>
-            </ul>
-            <!-- / dropdown -->
-          </li>
-        </ul>
-        <!-- / navbar right -->
-      </div>
-      <!-- / navbar collapse -->
-  </header>
+  <!-- header -->
+    <% include /decorate/header.ejs %>
   <!-- / header -->
 
 
+    <!-- aside -->
   <aside id="aside" class="app-aside hidden-xs bg-dark">
       <div class="aside-wrap">
         <div class="navi-wrap">
@@ -119,16 +68,16 @@
           <nav ui-nav class="navi clearfix">
             <ul class="nav">
               <li>
-                <a href="#">
+                <a href="/personal">
                   <i class="icon-user icon"></i>
                   <span>Личный кабинет</span>
                 </a>
               </li>
                             
-               <li>
-                <a href="#">
-                  <i class="glyphicon glyphicon-file icon"></i>
-                  <span>Каталог курсов</span>
+               <li class="active" onclick="event.stopPropagation()">
+                <a href="#" onclick="event.stopPropagation()">
+                  <i class="glyphicon glyphicon-file icon" onclick="event.stopPropagation()"></i>
+                  <span onclick="event.stopPropagation()">Каталог курсов</span>
                 </a>
               </li>
         
@@ -151,7 +100,7 @@
          <div class="col-xs-12">
            <div class="col-xs-12">
              <div class="col-xs-12">
-                <h1 class="m-n font-thin h3">Пользователи</h1>
+                <h1 class="m-n font-thin h3">Курсы</h1>
 
              </div>
            </div>
@@ -176,53 +125,48 @@
         <tbody>
 	        
 	      <tr>
-            <th style="padding-left: 30px;">Имя</th>
-            <th>Фамилия</th>
-            <th>E-mail</th>
-            <th>Пройдено курсов</th>
-            <th>Пройдено слайдов</th>
-            <th>Удалить</th>
-            <th>Редактировать</th>
+            <th style="padding-left: 30px;">Название курса</th>
+            <th  class="text-center">Количество элементов</th>
+           
+            <th  class="text-center">Удалить</th>
+            <th  class="text-center">Редактировать</th>
           </tr>
 	        
 	        
           <tr data-expanded="true" >
-	        <td>Ольга</td>  
-            <td>Кравчук</td>
-            <td>testmail@mail.ru</td>
-            <td>5</td>
-            <td>24</td>
-            <td><a href="#"><i data-modal="modal-9" class="fa md-trigger fa-times" aria-hidden="true"></i></a></td>
-            <td><a href="#"><i data-modal="modal-10" class="fa md-trigger fa-pencil" aria-hidden="true"></i></a></td>
+	        <td>Менеджмент</td>  
+            <td class="text-center">6</td>
+           
+            <td class="text-center"><a href="#"><i data-modal="modal-9" class="fa md-trigger fa-times" aria-hidden="true"></i></a></td>
+            <td class="text-center"><a href="#"><i data-modal="modal-10" class="fa md-trigger fa-pencil" aria-hidden="true"></i></a></td>
           </tr>
           
+               
           <tr data-expanded="true" >
-	        <td>Анастасия</td>
-            <td>Орлова</td>
-            <td>testmail@mail.ru</td>
-            <td>5</td>
-            <td>24</td>
-            <td><a href="#"><i data-modal="modal-9" class="fa md-trigger fa-times" aria-hidden="true"></i></a></td>
-            <td><a href="#"><i data-modal="modal-10" class="fa md-trigger fa-pencil" aria-hidden="true"></i></a></td>
+	        <td>Управление огранизацией</td>  
+            <td class="text-center">12</td>
+           
+            <td class="text-center"><a href="#"><i data-modal="modal-9" class="fa md-trigger fa-times" aria-hidden="true"></i></a></td>
+            <td class="text-center"><a href="#"><i data-modal="modal-10" class="fa md-trigger fa-pencil" aria-hidden="true"></i></a></td>
           </tr>
           
-            <tr data-expanded="true" >
-	        <td>testmail@mail.ru</td>
-            <td>testmail@mail.ru</td>
-            <td>testmail@mail.ru</td>
-            <td>5</td>
-            <td>24</td>
-            <td><a href="#"><i data-modal="modal-9" class="fa md-trigger fa-times" aria-hidden="true"></i></a></td>
-            <td><a href="#"><i data-modal="modal-10" class="fa md-trigger fa-pencil" aria-hidden="true"></i></a></td>
+               <tr data-expanded="true" >
+	        <td>Лидерство</td>  
+            <td class="text-center">4</td>
+           
+            <td class="text-center"><a href="#"><i data-modal="modal-9" class="fa md-trigger fa-times" aria-hidden="true"></i></a></td>
+            <td class="text-center"><a href="#"><i data-modal="modal-10" class="fa md-trigger fa-pencil" aria-hidden="true"></i></a></td>
           </tr>
+          
+         
           
           
         </tbody>
       </table>
     </div>
   </div>
-     <div id="import-users" class="btn md-trigger m-b-xs w-xs btn-default addbluecolor" data-modal="modal-9">Импортировать пользователей</div>
-   <div id="add-users" class="btn md-trigger m-b-xs w-xs btn-default addbluecolor" data-modal="modal-8">Добавить пользователя</div>
+  
+   <div id="add-users" class="btn md-trigger m-b-xs w-xs btn-default addbluecolor" data-modal="modal-8">Добавить курс</div>
    <div class="clear"></div>
   
  
@@ -235,18 +179,7 @@
 			
 			<!-- Контент-->
 			
-	<div class="panel panel-default" id="new-teacher">
-        <div class="panel-heading font-bold import-users-title">Импортировать пользователей</div>
-        <div class="panel-body">
-	        <p class="exampletext">
-	        Данная функция позволяет выполнить массовый импорт пользователей. Импорт выполняется в формате .csv <br><br> В файле должны присутствовать следующие колонки: Имя, Фамилия, E-mail, Пароль. <br><br> Скачайте <a href="example.csv">пример файла</a> для соблюдения точного соответствия формату.
-	        </p>
-	        
-          <form role="form">
-<button type="submit" class="btn btn-sm btn-primary button-users-add">Выберите файл</button>
-          </form>
-        </div>
-      </div>
+
 					<!-- Контент-->
 			
 			
@@ -278,43 +211,20 @@
 			<!-- Контент-->
 			
 	<div class="panel panel-default" id="new-teacher">
-        <div class="panel-heading font-bold">Новый пользователь</div>
+        <div class="panel-heading font-bold">Новый курс</div>
         <div class="panel-body">
           <form role="form">
             <div class="form-group">
          
-              <input type="text" class="form-control" placeholder="Имя">
+              <input type="text" class="form-control" placeholder="Название курса">
             </div>
-            <div class="form-group">
- 
-              <input type="text" class="form-control" placeholder="Фамилия">
-            </div>
-            
-            <div class="form-group">
- 
-              <input type="text" class="form-control" placeholder="E-mail">
-            </div>
+         
             
            
                     
             
             
-            <div class="typepassowd">
-	            
-	            
-	              <div class="form-group">
- 
-              <input type="password" class="form-control" placeholder="Пароль">
-            </div>
-            
-            <div class="form-group">
- 
-              <input type="password" class="form-control" placeholder="Подтвердите пароль">
-            </div>
-	            
-	            
-	            
-            </div>
+           
             
             
 <button type="submit" class="btn btn-sm btn-primary">Добавить</button>
@@ -399,43 +309,21 @@
 			<!-- Контент-->
 			
 	<div class="panel panel-default" id="new-teacher">
-        <div class="panel-heading font-bold">Редактировать пользователя</div>
+        <div class="panel-heading font-bold">Редактировать курс</div>
         <div class="panel-body">
           <form role="form">
             <div class="form-group">
          
-              <input type="text" class="form-control" placeholder="Имя">
+              <input type="text" class="form-control" placeholder="Название курса">
             </div>
             <div class="form-group">
  
-              <input type="text" class="form-control" placeholder="Фамилия">
+              <input type="text" class="form-control" placeholder="Количество элементов">
             </div>
             
 
     
-            <div class="form-group">
- 
-              <input type="email" class="form-control" placeholder="E-mail">
-            </div>
-            
-            
-            
-            <div class="typepassowd">
-	            
-	            
-	              <div class="form-group">
- 
-              <input type="password" class="form-control" placeholder="Пароль">
-            </div>
-            
-            <div class="form-group">
- 
-              <input type="password" class="form-control" placeholder="Подтвердите пароль">
-            </div>
-	            
-	            
-	            
-            </div>
+
             
             
 <button type="submit" class="btn btn-sm btn-primary">Сохранить</button>
