--- a/views/personal.ejs
+++ b/views/personal.ejs
@@ -115,7 +115,7 @@
         <div id="ifSaveBlock" style="min-height:10px; width:98%; border:2px solid #222; margin:1%"> Save! </div>
       <% } %>
       <% if ( deleted ) {%>
-        <div id="ifSaveBlock" style="min-height:10px; width:98%; border:2px solid #222; margin:1%"> User deleted! </div>
+        <div id="ifDeletedBlock" style="min-height:10px; width:98%; border:2px solid #222; margin:1%"> Step deleted! </div>
       <% } %>
       
       <table class="table teachers-table" ui-jq="footable" ui-options='{
