--- a/views/choose_course.ejs
+++ b/views/choose_course.ejs
@@ -38,67 +38,32 @@
           <!-- nav -->
           <nav ui-nav class="navi clearfix">
             <ul class="nav">
-            <li>
-                <a href class="auto">
-                  <span class="pull-right text-muted">
-                    <i class="fa fa-fw fa-angle-right text"></i>
-                    <i class="fa fa-fw fa-angle-down text-active"></i>
-                  </span>
-                  <i class="glyphicon glyphicon-file icon"></i>
-                  <span>Курс 1: Автоматизация</span>
-                  
-                </a>
-                <ul class="nav nav-sub dk no-padding-li">
-	                
-	               <li>
-                    <a href="#">
-                      <span>Просмотр видео</span>
-                    </a>
-                  </li> 
-	                
-                  <li>
-                    <a href="#">
-                      <span>Шаг 1</span>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <span>Шаг 2</span>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <span>Шаг 3</span>
-                    </a>
-                  </li>
-                  
-                </ul>
-              </li>
-              <li>
-                <a href="#">
-                  <i class="glyphicon glyphicon-envelope icon"></i>
-                  <span>Курс 2: Аналитика</span>
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <i class="fa fa-bar-chart"></i>
-                  <span>Курс 3: Редактирование </span>
-                </a>
-              </li>
-              
-              <li>
-                <a href="#">
-                  <i class="glyphicon glyphicon-envelope icon"></i>
-                  <span>Курс 4: Статистика</span>
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <i class="fa fa-bar-chart"></i>
-                  <span>Курс 5: Механика</span>
-                </a>
-              </li>
+            
+            <% for ( var i = 0; i < courses.length; i++ ) { %>
+                <% var course = courses[i] %>
+                <li>
+                  <a href class="auto">
+                    <span class="pull-right text-muted">
+                      <i class="fa fa-fw fa-angle-right text"></i>
+                      <i class="fa fa-fw fa-angle-down text-active"></i>
+                    </span>
+                    <i class="glyphicon glyphicon-file icon"></i>
+                    <span>Курс <%= i + 1 %>: <%= course.name %></span>
+                    
+                  </a>
+                  <ul class="nav nav-sub dk no-padding-li">
+	                  <% for (var j = 0; j < course.stepsData.length; j++) { %>
+	                      <li>
+                          <a href="#">
+                            <span><%= (course.stepsData[j].type == "video")?"Просмотр видео":
+                              (course.stepsData[j].type == "step")?"Шаг":"Неопределенно, сбой на стороне сервера" %> <%= (j == 0)?"":j %>
+                              </span>
+                          </a>
+                        </li>
+                    <% } %>
+                  </ul>
+                </li>
+            <% }%>
             </ul>
           </nav>
           <!-- nav -->
