--- a/views/course-management.ejs
+++ b/views/course-management.ejs
@@ -2,19 +2,19 @@
 <html lang="en" class="">
 <head>
   <meta charset="utf-8" />
-  <title>Курс Менеджмент</title>
+  <title> <%= course.name %> </title>
   <meta name="description" content="app, web app, responsive, responsive layout, admin, admin panel, admin dashboard, flat, flat ui, ui kit, AngularJS, ui route, charts, widgets, components" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-  <link rel="stylesheet" href="../libs/assets/animate.css/animate.css" type="text/css" />
-  <link rel="stylesheet" href="../libs/assets/font-awesome/css/font-awesome.min.css" type="text/css" />
-  <link rel="stylesheet" href="../libs/assets/simple-line-icons/css/simple-line-icons.css" type="text/css" />
-  <link rel="stylesheet" href="../libs/jquery/bootstrap/dist/css/bootstrap.css" type="text/css" />
+  <link rel="stylesheet" href="/libs/assets/animate.css/animate.css" type="text/css" />
+  <link rel="stylesheet" href="/libs/assets/font-awesome/css/font-awesome.min.css" type="text/css" />
+  <link rel="stylesheet" href="/libs/assets/simple-line-icons/css/simple-line-icons.css" type="text/css" />
+  <link rel="stylesheet" href="/libs/jquery/bootstrap/dist/css/bootstrap.css" type="text/css" />
 
-  <link rel="stylesheet" href="css/font.css" type="text/css" />
-  <link rel="stylesheet" href="css/app.css" type="text/css" />
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="knomarystyle.css">
-  <script src="js/modernizr.custom.js"></script>
+  <link rel="stylesheet" href="/css/font.css" type="text/css" />
+  <link rel="stylesheet" href="/css/app.css" type="text/css" />
+  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/knomarystyle.css">
+  <script src="/js/modernizr.custom.js"></script>
 
 </head>
 <body>
@@ -23,62 +23,8 @@
 
 	
   
-    <!-- header -->
-  <header id="header" class="app-header navbar" role="menu">
-      <!-- navbar header -->
-      <div class="navbar-header bg-dark">
-        <button class="pull-right visible-xs dk" ui-toggle-class="show" target=".navbar-collapse">
-          <i class="glyphicon glyphicon-cog"></i>
-        </button>
-        <button class="pull-right visible-xs" ui-toggle-class="off-screen" target=".app-aside" ui-scroll="app">
-          <i class="glyphicon glyphicon-align-justify"></i>
-        </button>
-        <!-- brand -->
-        <a href="#/" class="navbar-brand text-lt">
-          <span class="hidden-folded m-l-xs">Logo</span>
-        </a>
-        <!-- / brand -->
-      </div>
-      <!-- / navbar header -->
-
-      <!-- navbar collapse -->
-      <div class="collapse pos-rlt navbar-collapse box-shadow bg-white-only">
-        <!-- buttons -->
-        <div class="nav navbar-nav hidden-xs">
-          <a href="#" class="btn no-shadow navbar-btn" ui-toggle-class="app-aside-folded" target=".app">
-            <i class="fa fa-dedent fa-fw text"></i>
-            <i class="fa fa-indent fa-fw text-active"></i>
-          </a>
-        </div>
-        <!-- / buttons -->
-
- 
-
-        <!-- nabar right -->
-       <ul class="nav navbar-nav navbar-right">
-     
-     
-          <li class="dropdown">
-            <a href="#" data-toggle="dropdown" class="dropdown-toggle clear" data-toggle="dropdown">
-                           <span class="hidden-sm hidden-md">Администратор</span> <b class="caret"></b>
-            </a>
-            <!-- dropdown -->
-            <ul class="dropdown-menu animated fadeInUp w">
-              <li>
-                <a href="student_cabinet.html">Профиль</a>
-              </li>
-              <li class="divider"></li>
-              <li>
-                <a href="index.html">Выйти</a>
-              </li>
-            </ul>
-            <!-- / dropdown -->
-          </li>
-        </ul>
-        <!-- / navbar right -->
-      </div>
-      <!-- / navbar collapse -->
-  </header>
+  <!-- header -->
+      <% include /decorate/header.ejs %>
   <!-- / header -->
 
 
@@ -128,14 +74,13 @@
                 </a>
               </li>
                             
-               <li class="active" onclick="event.stopPropagation()">
-                <a href="#" onclick="event.stopPropagation()">
-                  <i class="glyphicon glyphicon-file icon" onclick="event.stopPropagation()"></i>
-                  <span onclick="event.stopPropagation()">Каталог курсов</span>
+               <li>
+                <a href="/edit_courses">
+                  <i class="glyphicon glyphicon-file icon"></i>
+                  <span>Каталог курсов</span>
                 </a>
               </li>
-        
-                          </ul>
+            </ul>
           </nav>
           <!-- nav -->
 
@@ -154,7 +99,7 @@
          <div class="col-xs-12">
            <div class="col-xs-12">
              <div class="col-xs-12">
-                <h1 class="m-n font-thin h3">Курс "Менеджмент"</h1>
+                <h1 class="m-n font-thin h3">Курс "<%= course.name %>"</h1>
 
              </div>
            </div>
@@ -166,6 +111,17 @@
 <div class="wrapper-md">
   <div class="panel panel-default">
     <div>
+      
+      <% if ( errMessage ) {%>
+        <div id="errorBlock"  style="min-height:10px; width:98%; border:2px solid #222; margin:1%"> <%= errMessage %> </div>
+      <% } %>
+      <% if ( save ) {%>
+        <div id="ifSaveBlock" style="min-height:10px; width:98%; border:2px solid #222; margin:1%"> Save! </div>
+      <% } %>
+      <% if ( deleted ) {%>
+        <div id="ifDeletedBlock" style="min-height:10px; width:98%; border:2px solid #222; margin:1%"> User deleted! </div>
+      <% } %>
+      
       <table class="table teachers-table" ui-jq="footable" ui-options='{
         "paging": {
           "enabled": true
@@ -187,45 +143,26 @@
             <th  class="text-center">Редактировать</th>
           </tr>
 	        
-	        
-          <tr data-expanded="true" >
-	        <td>Основы менеджмента</td>  
-            <td class="text-center">Видео</td>
-             <td class="text-center">-</td>
-            <td class="text-center"><a href="#"><i data-modal="modal-9" class="fa md-trigger fa-times" aria-hidden="true"></i></a></td>
-            <td class="text-center"><a href="#"><i data-modal="modal-10" class="fa md-trigger fa-pencil" aria-hidden="true"></i></a></td>
-          </tr>
-          
-          
-          
-                 <tr data-expanded="true" >
-	        <td>Модели управления</td>  
-            <td class="text-center">Шаг</td>
-             <td class="text-center">2</td>
-            <td class="text-center"><a href="#"><i data-modal="modal-9" class="fa md-trigger fa-times" aria-hidden="true"></i></a></td>
-            <td class="text-center"><a href="#"><i data-modal="modal-10" class="fa md-trigger fa-pencil" aria-hidden="true"></i></a></td>
-          </tr>        
-          
-               
-                 <tr data-expanded="true" >
-	        <td>Цели и задачи</td>  
-            <td class="text-center">Шаг</td>
-             <td class="text-center">1</td>
-            <td class="text-center"><a href="#"><i data-modal="modal-9" class="fa md-trigger fa-times" aria-hidden="true"></i></a></td>
-            <td class="text-center"><a href="#"><i data-modal="modal-10" class="fa md-trigger fa-pencil" aria-hidden="true"></i></a></td>
-          </tr>    
-         
-         
-              
-                 <tr data-expanded="true" >
-	        <td>Лидерство</td>  
-            <td class="text-center">Шаг</td>
-             <td class="text-center">3</td>
-            <td class="text-center"><a href="#"><i data-modal="modal-9" class="fa md-trigger fa-times" aria-hidden="true"></i></a></td>
-            <td class="text-center"><a href="#"><i data-modal="modal-10" class="fa md-trigger fa-pencil" aria-hidden="true"></i></a></td>
-          </tr>  
-          
-          
+	        <% for ( var i = 0; i < steps.length; i++) { %>
+	          <% var step = steps[i]; %>
+	          <% if ( step ) { %>
+                <tr data-expanded="true" >
+	                <td name="name"><%= step.name %></td>  
+	                <% if ( step.type == "video" ) { %>
+                    <td class="text-center">Видео</td>
+                  <% } else if ( step.type == "step" ) { %>
+                    <td class="text-center">Шаг</td>
+                  <%  } else { %>
+                    <td class="text-center">Неопределенно, сбой на стороне сервера</td>
+                  <% } %>
+                  <td class="text-center" name="position"><%= i %></td>
+                  <td style="display:none" name="_id"><%= step._id %></td>
+                  
+                  <td class="text-center"><a href="/deleteStep?courseId=<%= course._id %>&stepId=<%= step._id %>"><i data-modal="modal-9" class="fa md-trigger fa-times" aria-hidden="true"></i></a></td>
+                  <td class="text-center" onclick="loadToForm(event)"><a href="#"><i data-modal="modal-10" class="fa md-trigger fa-pencil" aria-hidden="true"></i></a></td>
+                </tr>
+            <% } %>
+          <% } %>
         </tbody>
       </table>
     </div>
@@ -251,22 +188,8 @@
 			
 			</div>
 		</div>
-		
-
-     
-  
-  
      <!-- Конец Модальное окно Импортировать пользователей -->
   
-  
-  
-  
-  
-  
-  
-  
-  
-   
    <!-- Модальное окно Добавить тренера -->
    	
 			<div class="md-modal md-effect-8" id="modal-8">
@@ -282,23 +205,10 @@
         <div class="panel-body">
           <form role="form">
             <div class="form-group">
-         
-          
-              <button  type="submit" class="add-element">Видео</button>
-                 <button  type="submit" class="add-element">Шаг</button>
-              
-              
+              <button  type="submit" class="add-element" onclick="location.href = '/addVidioInCourseId/<%= course._id %>/editId/';return false">Видео</button>
+              <button  type="submit" class="add-element" onclick="location.href = '/addStepInCourseId/<%= course._id %>/editId/';return false">Шаг</button>
             </div>
-         
-            
-           
-                    
-            
-            
-           
-            
-            
-<button type="submit" class="btn btn-sm btn-primary">Добавить</button>
+            <button style="display:none" type="submit" class="btn btn-sm btn-primary">Добавить</button>
           </form>
         </div>
       </div>
@@ -382,34 +292,59 @@
 	<div class="panel panel-default" id="new-teacher">
         <div class="panel-heading font-bold">Редактировать элемент</div>
         <div class="panel-body">
-          <form role="form">
+          <form role="form" id="formEditCourse" method="POST" action="/updateCuorse">
             <div class="form-group">
          
-              <input type="text" class="form-control" placeholder="Название элемента">
+              <input name="name" type="text" class="form-control" placeholder="Название элемента">
             </div>
-            <div class="form-group">
+            <!--<div class="form-group" >
  
               <input type="text" class="form-control" placeholder="Тип элемента">
-            </div>
+            </div>-->
             
              <div class="form-group">
  
-              <input type="text" class="form-control" placeholder="Порядок">
+              <input name="position" type="text" class="form-control" placeholder="Порядок">
             </div>
             
+            <input name="_id" type="text" style="display:none">
+            <input name="courseId" type="text" value="<%= course._id %>" style="display:none">
+            
+            <button type="submit" class="btn btn-sm btn-primary">Сохранить</button>
+          </form>
+        </div>
+      </div>
             
             
             
 
     
   
-
+<script>
+  function loadToForm (event) {
+      const user = event.currentTarget.parentElement,
+          form = document.getElementById("formEditCourse");
+      
+      if ( !( form && user ) ) {
+          return console.error(new Error("No user or form#formEditUser.modal-10"));
+      }
+      
+      form.reset();
+      
+      for ( var i = 0; i < user.childNodes.length; i++ ) {
+          if ( user.childNodes[i].nodeName != "#text" ) {
+              var name = user.childNodes[i].getAttribute("name");
+              
+              if ( name && form[name] ) {
+                  form[name].value = user.childNodes[i].innerHTML;
+              }
+          }
+      }
+  }
+  
+</script>
             
             
-<button type="submit" class="btn btn-sm btn-primary">Сохранить</button>
-          </form>
-        </div>
-      </div>
 					<!-- Контент-->
 			
 			
@@ -462,20 +397,20 @@
 
 </div>
 
-<script src="../libs/jquery/jquery/dist/jquery.js"></script>
-<script src="../libs/jquery/bootstrap/dist/js/bootstrap.js"></script>
-<script src="js/ui-load.js"></script>
-<script src="js/ui-jp.config.js"></script>
-<script src="js/ui-jp.js"></script>
-<script src="js/ui-nav.js"></script>
-<script src="js/ui-toggle.js"></script>
-<script src="js/ui-client.js"></script>
+<script src="/libs/jquery/jquery/dist/jquery.js"></script>
+<script src="/libs/jquery/bootstrap/dist/js/bootstrap.js"></script>
+<script src="/js/ui-load.js"></script>
+<script src="/js/ui-jp.config.js"></script>
+<script src="/js/ui-jp.js"></script>
+<script src="/js/ui-nav.js"></script>
+<script src="/js/ui-toggle.js"></script>
+<script src="/js/ui-client.js"></script>
 
 
 
 <!-- classie.js by @desandro: https://github.com/desandro/classie -->
-		<script src="js/classie.js"></script>
-		<script src="js/modalEffects.js"></script>
+		<script src="/js/classie.js"></script>
+		<script src="/js/modalEffects.js"></script>
 
 		<!-- for the blur effect -->
 		<!-- by @derSchepp https://github.com/Schepp/CSS-Filters-Polyfill -->
@@ -483,8 +418,8 @@
 			// this is important for IEs
 			var polyfilter_scriptpath = '/js/';
 		</script>
-		<script src="js/cssParser.js"></script>
-		<script src="js/css-filters-polyfill.js"></script>
+		<script src="/js/cssParser.js"></script>
+		<script src="/js/css-filters-polyfill.js"></script>
 
 
 
