--- a/views/edit-step.ejs
+++ b/views/edit-step.ejs
@@ -2,80 +2,26 @@
 <html lang="en" class="">
 <head>
   <meta charset="utf-8" />
-  <title>Редактировать шага</title>
+  <title>Редактировать шаг</title>
   <meta name="description" content="app, web app, responsive, responsive layout, admin, admin panel, admin dashboard, flat, flat ui, ui kit, AngularJS, ui route, charts, widgets, components" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-  <link rel="stylesheet" href="../libs/assets/animate.css/animate.css" type="text/css" />
-  <link rel="stylesheet" href="../libs/assets/font-awesome/css/font-awesome.min.css" type="text/css" />
-  <link rel="stylesheet" href="../libs/assets/simple-line-icons/css/simple-line-icons.css" type="text/css" />
-  <link rel="stylesheet" href="../libs/jquery/bootstrap/dist/css/bootstrap.css" type="text/css" />
+  <link rel="stylesheet" href="/libs/assets/animate.css/animate.css" type="text/css" />
+  <link rel="stylesheet" href="/libs/assets/font-awesome/css/font-awesome.min.css" type="text/css" />
+  <link rel="stylesheet" href="/libs/assets/simple-line-icons/css/simple-line-icons.css" type="text/css" />
+  <link rel="stylesheet" href="/libs/jquery/bootstrap/dist/css/bootstrap.css" type="text/css" />
 
-  <link rel="stylesheet" href="css/font.css" type="text/css" />
-  <link rel="stylesheet" href="css/app.css" type="text/css" />
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="knomarystyle.css">
+  <link rel="stylesheet" href="/css/font.css" type="text/css" />
+  <link rel="stylesheet" href="/css/app.css" type="text/css" />
+  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/knomarystyle.css">
 
 </head>
 <body>
 <div class="app app-header-fixed ">
   
 
-    <!-- header -->
-  <header id="header" class="app-header navbar" role="menu">
-      <!-- navbar header -->
-      <div class="navbar-header bg-dark">
-        <button class="pull-right visible-xs dk" ui-toggle-class="show" target=".navbar-collapse">
-          <i class="glyphicon glyphicon-cog"></i>
-        </button>
-        <button class="pull-right visible-xs" ui-toggle-class="off-screen" target=".app-aside" ui-scroll="app">
-          <i class="glyphicon glyphicon-align-justify"></i>
-        </button>
-        <!-- brand -->
-        <a href="#/" class="navbar-brand text-lt">
-          <span class="hidden-folded m-l-xs">Logo</span>
-        </a>
-        <!-- / brand -->
-      </div>
-      <!-- / navbar header -->
-
-      <!-- navbar collapse -->
-      <div class="collapse pos-rlt navbar-collapse box-shadow bg-white-only">
-        <!-- buttons -->
-        <div class="nav navbar-nav hidden-xs">
-          <a href="#" class="btn no-shadow navbar-btn" ui-toggle-class="app-aside-folded" target=".app">
-            <i class="fa fa-dedent fa-fw text"></i>
-            <i class="fa fa-indent fa-fw text-active"></i>
-          </a>
-        </div>
-        <!-- / buttons -->
-
- 
-
-        <!-- nabar right -->
-       <ul class="nav navbar-nav navbar-right">
-     
-     
-          <li class="dropdown">
-            <a href="#" data-toggle="dropdown" class="dropdown-toggle clear" data-toggle="dropdown">
-                           <span class="hidden-sm hidden-md">Администратор</span> <b class="caret"></b>
-            </a>
-            <!-- dropdown -->
-            <ul class="dropdown-menu animated fadeInUp w">
-              <li>
-                <a href="student_cabinet.html">Профиль</a>
-              </li>
-              <li class="divider"></li>
-              <li>
-                <a href="index.html">Выйти</a>
-              </li>
-            </ul>
-            <!-- / dropdown -->
-          </li>
-        </ul>
-        <!-- / navbar right -->
-      </div>
-      <!-- / navbar collapse -->
-  </header>
+  <!-- header -->
+    <% include /decorate/header.ejs %>
   <!-- / header -->
 
 
@@ -119,20 +65,19 @@
           <nav ui-nav class="navi clearfix">
             <ul class="nav">
               <li>
-                <a href="#">
+                <a href="/personal">
                   <i class="icon-user icon"></i>
                   <span>Личный кабинет</span>
                 </a>
               </li>
                             
                <li>
-                <a href="#">
+                <a href="/edit_courses">
                   <i class="glyphicon glyphicon-file icon"></i>
                   <span>Каталог курсов</span>
                 </a>
               </li>
-        
-                          </ul>
+            </ul>
           </nav>
           <!-- nav -->
 
@@ -172,12 +117,13 @@
     <div class="wrapper-md" ng-controller="FlotChartDemoCtrl">
       <div class="row">
         <div class="col-xs-12">
+	       <form name="main" method="POST">
           <div class="panel panel-default" style="padding-left: 5px; padding-right: 5px;">
 
             <div class="form-group add-kurs-margin-for-input">
               <label class="col-md-3 col-ms-12 control-label" for="input-id-1">Название шага</label>
               <div class="col-md-9">
-                <input type="text" class="form-control" id="input-id-1" placeholder="Введите название шага">
+                <input name="name" type="text" class="form-control" id="input-id-1" placeholder="Введите название шага">
               </div>
             </div>
       
@@ -186,18 +132,14 @@
               <label class="col-md-3 col-ms-12 control-label">Прикрепить файл</label>
                 <div class="col-md-9 col-xs-12">
                   <div class="bootstrap-filestyle input-group">
-	                  
-	                  
-	                  
-                    <input type="text" class="form-control hide" disabled=""> 
-                    <span class="group-span-filestyle input-group-btn" tabindex="0">
-                    
-                    
-                     <textarea class="step-textarea" name="text" placeholder="Вставьте HTML-код"></textarea>
-                    </span>
+                      <!--<input name="name"  type="text" class="form-control hide" disabled="">-->
+                      <span class="group-span-filestyle input-group-btn" tabindex="0">
+                        <textarea name="html" class="step-textarea" name="text" placeholder="Вставьте HTML-код"></textarea>
+                      </span>
                   </div>
                 </div>
             </div>
+          </form>
                        
                           <div class="form-group">
              <div class="col-sm-3"></div>
@@ -237,14 +179,14 @@
 
 </div>
 
-<script src="../libs/jquery/jquery/dist/jquery.js"></script>
-<script src="../libs/jquery/bootstrap/dist/js/bootstrap.js"></script>
-<script src="js/ui-load.js"></script>
-<script src="js/ui-jp.config.js"></script>
-<script src="js/ui-jp.js"></script>
-<script src="js/ui-nav.js"></script>
-<script src="js/ui-toggle.js"></script>
-<script src="js/ui-client.js"></script>
+<script src="/libs/jquery/jquery/dist/jquery.js"></script>
+<script src="/libs/jquery/bootstrap/dist/js/bootstrap.js"></script>
+<script src="/js/ui-load.js"></script>
+<script src="/js/ui-jp.config.js"></script>
+<script src="/js/ui-jp.js"></script>
+<script src="/js/ui-nav.js"></script>
+<script src="/js/ui-toggle.js"></script>
+<script src="/js/ui-client.js"></script>
 
 </body>
 </html>
