--- a/views/edit-video.ejs
+++ b/views/edit-video.ejs
@@ -5,15 +5,15 @@
   <title>Редактировать видео</title>
   <meta name="description" content="app, web app, responsive, responsive layout, admin, admin panel, admin dashboard, flat, flat ui, ui kit, AngularJS, ui route, charts, widgets, components" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-  <link rel="stylesheet" href="../libs/assets/animate.css/animate.css" type="text/css" />
-  <link rel="stylesheet" href="../libs/assets/font-awesome/css/font-awesome.min.css" type="text/css" />
-  <link rel="stylesheet" href="../libs/assets/simple-line-icons/css/simple-line-icons.css" type="text/css" />
-  <link rel="stylesheet" href="../libs/jquery/bootstrap/dist/css/bootstrap.css" type="text/css" />
+  <link rel="stylesheet" href="/libs/assets/animate.css/animate.css" type="text/css" />
+  <link rel="stylesheet" href="/libs/assets/font-awesome/css/font-awesome.min.css" type="text/css" />
+  <link rel="stylesheet" href="/libs/assets/simple-line-icons/css/simple-line-icons.css" type="text/css" />
+  <link rel="stylesheet" href="/libs/jquery/bootstrap/dist/css/bootstrap.css" type="text/css" />
 
-  <link rel="stylesheet" href="css/font.css" type="text/css" />
-  <link rel="stylesheet" href="css/app.css" type="text/css" />
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="knomarystyle.css">
+  <link rel="stylesheet" href="/css/font.css" type="text/css" />
+  <link rel="stylesheet" href="/css/app.css" type="text/css" />
+  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/knomarystyle.css">
 
 </head>
 <body>
@@ -119,20 +119,19 @@
           <nav ui-nav class="navi clearfix">
             <ul class="nav">
               <li>
-                <a href="#">
+                <a href="/personal">
                   <i class="icon-user icon"></i>
                   <span>Личный кабинет</span>
                 </a>
               </li>
                             
                <li>
-                <a href="#">
+                <a href="/edit_courses">
                   <i class="glyphicon glyphicon-file icon"></i>
                   <span>Каталог курсов</span>
                 </a>
               </li>
-        
-                          </ul>
+            </ul>
           </nav>
           <!-- nav -->
 
@@ -173,11 +172,13 @@
       <div class="row">
         <div class="col-xs-12">
           <div class="panel panel-default" style="padding-left: 5px; padding-right: 5px;">
+            <form name="video" enctype="multipart/form-data" method="POST" >
 
             <div class="form-group add-kurs-margin-for-input">
               <label class="col-md-3 col-ms-12 control-label" for="input-id-1">Название видео</label>
               <div class="col-md-9">
-                <input type="text" class="form-control" id="input-id-1">
+                  <input name="name"  type="text" class="form-control" id="input-id-1"  required>
+                  <input name="video" type="file" class="form-control" id="fileTriget" accept="video/*" required style="position:absolute;    position: absolute;width: 0px;height: 0px;overflow: hidden;box-sizing: border-box;">
               </div>
             </div>
       
@@ -185,7 +186,7 @@
                        <div class="form-group add-kurs-big-margin-for-input">
               <label class="col-md-3 col-ms-12 control-label">Прикрепить файл</label>
                 <div class="col-md-9 col-xs-12">
-                  <div class="bootstrap-filestyle input-group">
+                  <div class="bootstrap-filestyle input-group" onclick="$('#fileTriget').trigger('click')">
                     <input type="text" class="form-control hide" disabled=""> 
                     <span class="group-span-filestyle input-group-btn" tabindex="0">
                       <label for="filestyle-0" class="btn btn-primary add-kurs-button-size col-xs-12">
@@ -201,6 +202,7 @@
               <div class="col-sm-9 p-0 p0-20">
                 <button class="btn m-b-xs btn-default addbluecolor col-sm-3 add-kurs-button-size-save btn-w-a float-right" style="margin-left: 19px;">Сохранить</button>
               
+                </form>
               </div>
             </div>
        
@@ -234,14 +236,14 @@
 
 </div>
 
-<script src="../libs/jquery/jquery/dist/jquery.js"></script>
-<script src="../libs/jquery/bootstrap/dist/js/bootstrap.js"></script>
-<script src="js/ui-load.js"></script>
-<script src="js/ui-jp.config.js"></script>
-<script src="js/ui-jp.js"></script>
-<script src="js/ui-nav.js"></script>
-<script src="js/ui-toggle.js"></script>
-<script src="js/ui-client.js"></script>
+<script src="/libs/jquery/jquery/dist/jquery.js"></script>
+<script src="/libs/jquery/bootstrap/dist/js/bootstrap.js"></script>
+<script src="/js/ui-load.js"></script>
+<script src="/js/ui-jp.config.js"></script>
+<script src="/js/ui-jp.js"></script>
+<script src="/js/ui-nav.js"></script>
+<script src="/js/ui-toggle.js"></script>
+<script src="/js/ui-client.js"></script>
 
 </body>
 </html>
