--- a/views/decorate/header.ejs
+++ b/views/decorate/header.ejs
@@ -31,15 +31,15 @@
         <ul class="nav navbar-nav navbar-right">
           <li class="dropdown">
             <a href="#" data-toggle="dropdown" class="dropdown-toggle clear" data-toggle="dropdown">
-              <span class="thumb-sm avatar pull-right m-t-n-sm m-b-n-sm m-l-sm">
+              <!--<span class="thumb-sm avatar pull-right m-t-n-sm m-b-n-sm m-l-sm">
                 <img src="/img/a0.jpg" alt="...">
                 <i class="on md b-white bottom"></i>
-              </span>
-              <span class="hidden-sm hidden-md"><%= user.name + " " + user.surname %></span> <b class="caret"></b>
+              </span>-->
+              <span><%= user.name + " " + user.surname %></span> <b class="caret"></b>
             </a>
              <!-- dropdown -->
             <ul class="dropdown-menu animated fadeInUp w">
-              <li class="divider"></li>
+              <!--<li class="divider"></li>-->
               <li>
                 <a href="/exit">Выйти</a>
               </li>
